--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
-body{
-background-color: rgb(99, 7, 185);
-margin-top: 30px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* Ensures padding doesn't cause overflow */
+  }
   
-}
+  @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
+  
+  html, body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Prevent horizontal scroll */
+  }
+  
+  body {
+    background-color: #0f0823;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensure the body covers the full viewport height */
+    background-image: url(/public//imgs/605a9c8e59d1b810c572a570_blur-blob-nft-webflow-template.svg);
+  }
+  
