--- a/src/components/application.css
+++ b/src/components/application.css
@@ -11,7 +11,28 @@
 h2{
     color: #fff;
 }
+.maindivs{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+h1{
+    margin-left: 140px;
+    color: #fff;
+    &:hover {
+        color: red; /* Change color on hover (optional) */
+      }
+}
+a{
+    text-decoration: none; /* Remove underline */
+  /* Optional: Use inherited color from parent */
+    &:hover {
+      color: red; /* Change color on hover (optional) */
+    }
+  
+}
 
+   
+}
 .main{
     width: 540px; height: 650px;
     background-image: linear-gradient(280deg, #6148ff, #edb8ff);
@@ -46,8 +67,8 @@ h2{
 }
 
 .input-plant{
-    width: 160px;
-    margin-left: 20px;
+    width: 190px;
+    margin-left: 14px;
     height: 82px;
     color: #bebdd4;
     background-color: rgb(49 43 66);
@@ -56,7 +77,7 @@ h2{
     margin-bottom: 0;
     padding-left: 26px;
     padding-right: 26px;
-    font-size: 20px;
+    font-size: 16px;
     transition: color 35.s, ;
 }
 
@@ -78,7 +99,7 @@ h2{
 .submit-class-border{
     width: 278px; height: 78px;
     margin: 35px 0px 0px 55px;
-    
+ 
     background-image: linear-gradient(280deg, #6148ff, #edb8ff);
     border-radius: 50px;
     display: flex;
@@ -90,6 +111,7 @@ h2{
     width: 274px; height: 74px;
     background-color: #0f0823;
     color: #ffffff;
+    cursor: pointer;
     text-align: center;
     border-radius: 80px;
 }
@@ -107,7 +129,7 @@ h2{
     width: 630px; height: 640px;
     background-color: #0f0823;
     border-radius: 50px;
-
+padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
