--- a/src/components/application.css
+++ b/src/components/application.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
+    gap: 50px;
 
     
 }
@@ -137,6 +137,125 @@ padding: 30px;
 
 .ai-text{
     text-align: start;
-    padding: 10px;
+    padding: 20px;
+    font-size: 23px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
+}
+
+
+body{
+    margin: 0;
+    padding: 0;
+    border-radius: box;
+}
+
+.Wheater-Cards-Main{
+  
+    height: 210px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+gap: 40px;
+   
+}
+.Wheater-Card{
+    width: 240px;
+    height: 110px;
+    background-image: linear-gradient(280deg, #6148ff, #edb8ff);
+    border-radius: 50px;
+    color: #ffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Dark-Card{
+    width: 232px;
+    height: 107px;
+    background-color: #0f0823;
+    border-radius: 50px;
+    color: #ffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.Wheater-Card p{
+    color: #ffff;
+}
+.Wheater-Card strong{
+    color: #ffff;
+}
+
+.informations{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.information-weather {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px; /* Changed to lowercase 'px' */
+}
+
+.information-weather h1 {
+    color: #fff;
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.information-weather input {
+    width: 300px;
+    height: 40px;
+    border-radius: 30px;
+    padding: 20px;
+    font-size: 19px;
+    border: 3px solid rgb(128, 0, 255);
+}
+
+.sugest {
+    width: 300px;
+    color: #fff;
+   
+}
+.wheathereror{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    p{
+        color: #ff9696;
+        font-size: 17px;
+    }
+}
+
+.getweather {
+    padding: 20px;
+    cursor: pointer;
+    width: 300px;
+    border: none;
+    background-color: #4f34ff;
+    border-radius: 30px;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #fff;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effects */
+}
+
+.getweather:hover {
+    background-color: #3d28cc; /* Darker shade on hover */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect */
+
+}
+
+.isz{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
 }
